@@ -7,7 +7,7 @@ use Drupal\backup_migrate\Core\Main\BackupMigrateInterface;
 use Drupal\backup_migrate\Core\Plugin\PluginManagerInterface;
 use Drupal\backup_migrate\Entity\SettingsProfile;
 use Drupal\Core\Form\FormStateInterface;
-
+use Drupal\backup_migrate\Drupal\Destination\DrupalDirectoryDestination;
 /**
  *
  *
@@ -43,7 +43,8 @@ class DrupalConfigHelper {
   /**
    * Build the configuration form for a single plugin, source or destination.
    *
-   * @param \Drupal\backup_migrate\Core\Config\ConfigurableInterface $plugin
+   * @param Drupal\backup_migrate\Drupal\Destination\DrupalDirectoryDestination;
+ $plugin
    *   The plugin, source or destination to build the form for.
    * @param string $operation
    *   'backup', 'restore', or 'initialize' depending on the operation being
@@ -52,7 +53,7 @@ class DrupalConfigHelper {
    *
    * @return array
    */
-  public static function buildPluginForm(ConfigurableInterface $plugin, $operation, array $parents = ['config']) {
+  public static function buildPluginForm(DrupalDirectoryDestination $plugin, $operation, array $parents = ['config']) {
     $schema = $plugin->configSchema(['operation' => $operation]);
     $config = $plugin->config();
 
